--- a/trip-mgmt-func/tsconfig.json
+++ b/trip-mgmt-func/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compileOnSave": true,
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "compilerOptions": {
     "module": "commonjs",
+    "resolveJsonModule": true,
     "noImplicitReturns": true,
     "outDir": "lib",
     "sourceMap": true,
