--- a/trip-mgmt-func/tsconfig.json
+++ b/trip-mgmt-func/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compileOnSave": true,
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "compilerOptions": {
     "module": "commonjs",
     "noImplicitReturns": true,
