--- a/trip-mgmt-func/package.json
+++ b/trip-mgmt-func/package.json
@@ -15,6 +15,7 @@
     "node": "20"
   },
   "dependencies": {
+    "@firebase/storage": "^0.13.3",
     "@genkit-ai/ai": "^0.5.17",
     "@genkit-ai/core": "^0.5.17",
     "@genkit-ai/dotprompt": "^0.5.17",
@@ -23,12 +24,15 @@
     "@genkit-ai/googleai": "^0.5.16",
     "@genkit-ai/vertexai": "^0.5.17",
     "cors": "^2.8.5",
+    "data-urls": "^5.0.0",
     "express": "^4.21.1",
+    "firebase": "^11.0.1",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/data-urls": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
