--- a/firebase.json
+++ b/firebase.json
@@ -29,6 +29,9 @@
     "singleProjectMode": true,
     "storage": {
       "port": 9199
+    },
+    "auth": {
+      "port": 9099
     }
   },
   "firestore": {
