--- a/trip-mgmt-func/example.env
+++ b/trip-mgmt-func/example.env
@@ -1,13 +1,13 @@
-APP_CORS_ORIGIN_DOMAINS=tripminder.be, localhost
+APP_CORS_ORIGIN_DOMAINS=tripminder.be,localhost:3000
 APP_GOOGLE_GENAI_API_KEY=GOOGLE_GENAI_API_KEY
 
 SERVICE_ACCT_FIREBASE_PROJECT_ID=
-SERVICE_ACCT_PRIVATE_KEY_ID
-SERVICE_ACCT_FIREBASE_PRIVATE_KEY
-SERVICE_ACCT_FIREBASE_CLIENT_EMAIL
-SERVICE_ACCT_CLIENT_ID
-SERVICE_ACCT_AUTH_URI
-SERVICE_ACCT_TOKEN_URI
-SERVICE_ACCT_AUTH_PROVIDER_X509_CERT_URL
-SERVICE_ACCT_CLIENT_X509_CERT_URL
-SERVICE_ACCT_UNIVERSE_DOMAIN
+SERVICE_ACCT_PRIVATE_KEY_ID=
+SERVICE_ACCT_FIREBASE_PRIVATE_KEY="enclose in quote"
+SERVICE_ACCT_FIREBASE_CLIENT_EMAIL=
+SERVICE_ACCT_CLIENT_ID=
+SERVICE_ACCT_AUTH_URI=
+SERVICE_ACCT_TOKEN_URI=
+SERVICE_ACCT_AUTH_PROVIDER_X509_CERT_URL=
+SERVICE_ACCT_CLIENT_X509_CERT_URL=
+SERVICE_ACCT_UNIVERSE_DOMAIN=
