--- a/trip-mgmt-func/example.env
+++ b/trip-mgmt-func/example.env
@@ -1,5 +1,6 @@
 APP_CORS_ORIGIN_DOMAINS=tripminder.be,localhost:3000
 APP_GOOGLE_GENAI_API_KEY=GOOGLE_GENAI_API_KEY
+GEMINI_API_KEY=GOOGLE_GENAI_API_KEY
 
 SERVICE_ACCT_FIREBASE_PROJECT_ID=
 SERVICE_ACCT_PRIVATE_KEY_ID=
