--- a/trip-mgmt-func/package.json
+++ b/trip-mgmt-func/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "data-urls": "^5.0.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "firebase": "^11.3.1",
     "firebase-admin": "^13.1.0",
     "firebase-functions": "^6.3.2",
