--- a/trip-mgmt-func/package.json
+++ b/trip-mgmt-func/package.json
@@ -33,15 +33,18 @@
     "zod": "^3.25.61"
   },
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@types/data-urls": "^3.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "eslint": "^9.28.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.4.1",
     "genkit": "^1.12.0",
-    "typescript": "^5.8.3"
+    "globals": "^16.2.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.0"
   },
   "private": true
 }
