--- a/trip-mgmt-func/package.json
+++ b/trip-mgmt-func/package.json
@@ -4,7 +4,7 @@
     "start": "npm run shell",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "lint": "eslint --ext .js,.ts .",
+    "lint": "eslint .",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "deploy": "firebase deploy --only functions",
