--- a/trip-mgmt-func/package.json
+++ b/trip-mgmt-func/package.json
@@ -2,8 +2,7 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "npm run shell",
-    "build": "tsc",
-    "build:watch": "tsc --watch",
+    "build": "tsup",
     "lint": "eslint .",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
@@ -39,16 +38,17 @@
     "@types/data-urls": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^9.28.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.4.1",
     "genkit": "^1.12.0",
     "globals": "^16.2.0",
+    "replace-in-file": "^6.2.0",
+    "tsup": "^8.5.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.0",
-    "copyfiles": "^2.4.1",
-    "replace-in-file": "^6.2.0"
+    "typescript-eslint": "^8.34.0"
   },
   "private": true
 }
